PlayerStatsPage.css -> Changed gameHeroPic and gameKDA width to prevent line break on KDA

--- a/Fate.WebServer/Content/css/PlayerStatsPage.css
+++ b/Fate.WebServer/Content/css/PlayerStatsPage.css
@@ -153,7 +153,7 @@
 }
 
 .gameHeroPic {
-	width: 90px;
+	width: 80px;
 }
 
 .gameResultInfo {
@@ -161,7 +161,7 @@
 }
 
 .gameKDA {
-	width: 90px;
+	width: 100px;
 }
 
 .gameLevelGold {
